# ros_vanetza_msgs

./: CMakeLists.txt  CONTRIBUTING.md  LICENSE  README.md  package.xml
msg/: BtpDataIndication.msg  GeoNetArea.msg  GeoNetDestination.msg  PositionVector.msg  TrafficClass.msg
srv/: BtpData.srv
